2010-06-04  Bruno Haible  <bruno@clisp.org>

	* m4/libtool.m4: Update from libtool-2.2.8, with modifications.
	2009-04-23  Bruno Haible  <bruno@clisp.org>
		Fix recognition of "nm" command.
		* m4/libtool.m4 (LT_PATH_NM): Try "nm" program also when
		compiling for mingw in a cygwin environment.
	2008-04-06  Bruno Haible  <bruno@clisp.org>
		* m4/libtool.m4 (LT_INIT): When setting LIBTOOL, use
		CONFIG_SHELL; don't assume that the Makefile.in will set SHELL
		to ${CONFIG_SHELL}.
	* m4/ltoptions.m4: Update from libtool-2.2.8.
	* m4/ltversion.m4: Likewise.
	* m4/lt~obsolete.m4: Likewise.
	* build-aux/ltmain.sh: Likewise.

2010-06-01  Bruno Haible  <bruno@clisp.org>

	Avoid possible bad interaction with Solaris 2.5.1 <pthread.h>.
	* lib/stdint.mini.h (_UINT64_T): Don't define.
	Reported by Ben Pfaff <blp@cs.stanford.edu>.

2010-05-16  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* gnulib-local/lib/unicase.in.h.diff: Renamed from
	gnulib-local/lib/unicase.h.diff.
	* gnulib-local/lib/uniconv.in.h.diff: Renamed from
	gnulib-local/lib/uniconv.h.diff.
	* gnulib-local/lib/unictype.in.h.diff: Renamed from
	gnulib-local/lib/unictype.h.diff.
	* gnulib-local/lib/unilbrk.in.h.diff: Renamed from
	gnulib-local/lib/unilbrk.h.diff.
	* gnulib-local/lib/uninorm.in.h.diff: Renamed from
	gnulib-local/lib/uninorm.h.diff.
	* gnulib-local/lib/unistr.in.h.diff: Renamed from
	gnulib-local/lib/unistr.h.diff.
	* gnulib-local/lib/unitypes.in.h.diff: Renamed from
	gnulib-local/lib/unitypes.h.diff.
	* gnulib-local/lib/uniwidth.in.h.diff: Renamed from
	gnulib-local/lib/uniwidth.h.diff.
	* gnulib-local/Makefile.am (EXTRA_DIST): Update.
	* gnulib-local/modules/unictype/category-none-tests.diff: Update.
	* autogen.sh: Update.

2010-05-14  Bruno Haible  <bruno@clisp.org>

	Publicize also the subminor version number.
	* lib/unistring/version.in.h (_LIBUNISTRING_VERSION,
	_libunistring_version): Include also the subminor version.
	* configure.ac (HEXVERSION): Likewise.
